unpackaged/main/default/objects/litify_time__lit_Cost__c/litify_time__lit_Cost__c.object-meta.xml
<CustomObject>
    <description>Stores data about hard and soft expenses that a user could potentially bill their customers for.</description>
    <label>Cost</label>
    <nameField>
        <label>Cost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Costs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>