unpackaged/main/default/objects/litify_time__lit_Cost__c/fields/litify_time__lit_Amount__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Amount__c</fullName>
    <formula>MAX(0, CASE(litify_time__lit_Rate__r.litify_time__lit_Rate_Type__c,
 &#39;Fixed&#39;, litify_time__lit_Billing_Rate__c,
 &#39;Flat Fee&#39;, litify_time__lit_Billing_Rate__c,
 &#39;Cost&#39;, litify_time__lit_Billing_Rate__c * litify_time__lit_Billed_Quantity__c,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>