unpackaged/main/default/objects/litify_time__lit_Cost__c/fields/litify_time__lit_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Amount_Paid__c</fullName>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>