unpackaged/main/default/objects/litify_time__lit_Cost__c/fields/litify_time__lit_Bill_Lookup__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Bill_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill</label>
    <referenceTo>litify_time__lit_Bill__c</referenceTo>
    <relationshipLabel>Cost Bills</relationshipLabel>
    <relationshipName>lit_Cost_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>