unpackaged/main/default/objects/litify_time__lit_Cost__c/fields/litify_time__lit_Bill_Status__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Bill_Status__c</fullName>
    <formula>TEXT(litify_time__lit_Bill_Lookup__r.litify_time__lit_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Status</label>
    <type>Text</type>
</CustomField>