unpackaged/main/default/objects/litify_time__lit_Cost__c/fields/litify_time__lit_Billable__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>