unpackaged/main/default/objects/litify_time__lit_Cost__c/fields/litify_time__lit_Billed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Billed_Quantity__c</fullName>
    <formula>litify_time__lit_Quantity__c - litify_time__lit_Quantity_Markdown__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billed Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>