unpackaged/main/default/objects/litify_time__lit_Cost__c/fields/litify_time__lit_Check_Printed__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Check_Printed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Printed</label>
    <type>Checkbox</type>
</CustomField>