unpackaged/main/default/objects/litify_time__lit_Cost__c/fields/litify_time__lit_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Date__c</fullName>
    <description>Date cost was accrued</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>