unpackaged/main/default/objects/litify_time__lit_Cost__c/fields/litify_time__lit_Disposition__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bill</fullName>
            </value>
            <value>
                <fullName>Do Not Bill</fullName>
            </value>
            <value>
                <fullName>No Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>