unpackaged/main/default/objects/litify_time__lit_Cost__c/fields/litify_time__lit_Markdown_Amount__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Markdown_Amount__c</fullName>
    <formula>MAX(0,litify_time__lit_Original_Amount__c -  litify_time__lit_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Markdown Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>