unpackaged/main/default/objects/litify_time__lit_Cost__c/fields/litify_time__lit_Memo__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Memo__c</fullName>
    <label>Memo</label>
    <type>TextArea</type>
</CustomField>