unpackaged/main/default/objects/litify_time__lit_Cost__c/fields/litify_time__lit_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>