unpackaged/main/default/objects/litify_time__lit_Cost__c/fields/litify_time__lit_Primary_Related_Record__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Primary_Related_Record__c</fullName>
    <externalId>true</externalId>
    <label>Primary Related Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>