unpackaged/main/default/objects/litify_time__lit_Cost__c/fields/litify_time__lit_Rate_Markdown__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Rate_Markdown__c</fullName>
    <label>Rate Markdown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>