unpackaged/main/default/objects/litify_time__lit_Cost__c/fields/litify_time__lit_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Reference_Number__c</fullName>
    <externalId>true</externalId>
    <label>Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>