unpackaged/main/default/objects/litify_time__lit_Cost__c/fields/litify_time__lit_Taxed_Amount__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Taxed_Amount__c</fullName>
    <formula>litify_time__lit_Tax_Code__r.litify_time__lit_Percent__c * litify_time__lit_Billed_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>