unpackaged/main/default/objects/litify_time__lit_Cost__c/fields/litify_time__lit_Vendor__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Costs</relationshipLabel>
    <relationshipName>Costs</relationshipName>
    <type>Lookup</type>
</CustomField>