unpackaged/main/default/objects/litify_time__lit_Cost__c/fields/litify_time__lit_Write_Off_Amount__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Write_Off_Amount__c</fullName>
    <label>Write Off Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>