unpackaged/main/default/objects/litify_time__lit_Cost__c/listViews/litify_time__All.listView-meta.xml
<ListView>
    <fullName>litify_time__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>